--- a/inedx.html
+++ b/inedx.html
@@ -17,9 +17,9 @@
             <div class="header__main">
                 <a class="header__logo" href="#"><img src="./image/logo-of-company-olo.svg" alt="logo of company"></a>
                 <ul class="header__list">
-                    <li class="header__items"><a class="header__link" href="http://127.0.0.1:5502/index.html">HOME</a></li>
-                    <li class="header__items"><a class="header__link" href="http://127.0.0.1:5501/index.html">ABOUT US</a></li>
-                    <li class="header__items"><a class="header__link" href="http://127.0.0.1:5500/inedx.html#">Create your plan</a></li>
+                    <li class="header__items"><a class="header__link" href="#">HOME</a></li>
+                    <li class="header__items"><a class="header__link" href="#">ABOUT US</a></li>
+                    <li class="header__items"><a class="header__link" href="#">Create your plan</a></li>
                 </ul>
             </div>
 
